[package]
    name = "pan_bindings"
    version = "1.0.2"
    edition = "2021"
    license = "MIT OR Apache-2.0"
    build = "build.rs"
    description= "FFI bindings for the SCION PAN Path Aware Networking library"

[lib]
name = "pan"         
path = "./rust/src/lib.rs"

[[example]]
name = "async_echo"          
path = "examples/rust/src/async_echo.rs"  
crate-type=["bin"]

[[example]]
name = "main"          
path = "examples/rust/src/main.rs"  
crate-type=["bin"]

[[example]]
name = "async_socket_echo"          
path = "examples/rust/src/async_socket_echo.rs"  
crate-type=["bin"]

[[example]]
name = "async_socket_echo_unix"          
path = "examples/rust/src/async_socket_echo_unix.rs"
crate-type=["bin"]


[build-dependencies]
bindgen = "0.65.1"
cmake = "0.1.31"
cc = "1.0.83"
walkdir = "2"

[dependencies]
async-std = "1.12.0"
byteorder = "1.5.0"
rand_pcg = "0.3.1"
rand = { version = "0.8.5", default-features = true }
tokio = { version = "1.0", features = ["full"] }
futures = "0.3.29"
async-recursion2 = {version ="1.0.5"}
scionnet ={version="0.0.2" }
log = "0.4.20"

## for the examples
clap = { version = "4.0", features = ["derive"] }
time = "0.3.30"
simplelog = "^0.12.0"
env_logger= "0.10.1"
