[package]
    name = "pan_bindings"
    version = "1.0.0"
    edition = "2021"


[build-dependencies]
bindgen = "0.65.1"
tokio = { version = "1.0", features = ["full"] }
log = "0.4.20"
#snet ={version="0.0.1", path ="../../scion-net-std" }
futures = "0.3.29"
async-recursion = {version ="1.0.5", path="../../async-recursion"}

[dependencies]
tokio = { version = "1.0", features = ["full"] }
bindgen = "0.65.1"
futures = "0.3.29"
async-recursion = {version ="1.0.5", path="../../async-recursion"}
snet ={version="0.0.1", path ="../../rust-scion-std-net" }
log = "0.4.20"

