[package]
    name = "pan_bindings"
    version = "1.0.0"
    edition = "2021"


[build-dependencies]
bindgen = "0.65.1"
tokio = { version = "1.0", features = ["full"] }
log = "0.4.20"
#snet ={version="0.0.1", path ="../../scion-net-std" }
futures = "0.3.29"
async-recursion = {version ="1.0.5", path="../../async-recursion"}

[dependencies]
async-std = "1.12.0"
byteorder = "1.5.0"
rand_pcg = "0.3.1"
rand = { version = "0.8.5", default-features = true }
tokio = { version = "1.0", features = ["full"] }
bindgen = "0.65.1"
futures = "0.3.29"
async-recursion = {version ="1.0.5", path="../../async-recursion"}
snet ={version="0.0.1", path ="../../rust-scion-std-net" }
log = "0.4.20"

