[package]
    name = "pan_bindings_example"
    version = "1.0.0"

[[bin]]
name = "main"
path = "src/main.rs"



[build-dependencies]
pan_bindings  = { path= "../../rust" }
bindgen = "0.65.1"
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }

[dependencies]
clap = { version = "4.0", features = ["derive"] }
pan_bindings  = { path= "../../rust" }
tokio = { version = "1.0", features = ["full"] }
bindgen = "0.65.1"