[package]
    name = "pan_bindings_example"
    version = "1.0.0"
    edition = "2021"

[[bin]]
name = "echo"
path = "src/main.rs"

[[bin]]
name = "async_echo"
path = "src/async_echo.rs"

[[bin]]
name = "async_socket_echo"
path = "src/async_socket_echo.rs"


[[bin]]
name = "async_socket_echo_unix"
path = "src/async_socket_echo_unix.rs"

[build-dependencies]
pan_bindings  = { path= "../../rust" }
#bindgen = "0.65.1"
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
simplelog = "^0.12.0"
time = "0.3.30"
#simple_logger = {version = "4.3.0", default-features = false, features = ["timestamps"] }

log = "0.4.20"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
pan_bindings  = { path= "../../rust" }
tokio = { version = "1.0", features = ["full"] }
#bindgen = "0.65.1"
time = "0.3.30"
simplelog = "^0.12.0"
env_logger= "0.10.1"
#simple_logger = {version = "4.3.0", default-features = false, features = ["timestamps"] }
log = "0.4.20"
#futures-io = { version = "0.3.19", optional = true }
futures = "0.3.29"
scionnet ={version="0.0.5"}